# mobicontrol-api-tester

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  app.rs  auth.rs  credentials.rs  main.rs  paths.rs  swagger.rs
