[package]
name = "mobicontrol-api-tester"
version = "0.1.1"
edition = "2021"
description = "A cross-platform GUI for testing SOTI MobiControl REST API calls"

[dependencies]
# UI
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.27"

# HTTP - blocking client with rustls (no OpenSSL dependency, cross-platform clean)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"

# Encryption for saved credentials
simple-encrypt = "0.1"

# Native file dialogs (cross-platform)
rfd = "0.14"

# Cross-platform user directories
dirs = "5"

# Base64 for the Basic auth header
base64 = "0.22"

# SHA-256 for deriving the machine-bound encryption key
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
# Reading HKLM\SOFTWARE\Microsoft\Cryptography\MachineGuid
winreg = "0.52"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
